added two phase algorithem

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="icon" href="assets/icon.png" type="image/x-icon">
     <title>Rubiks cube</title>
     <link rel="stylesheet" href="assets/style.css">
-    <script src="assets/cubejs/cube.js"></script>
-    <script src="assets/cubejs/async.js"></script>
-    <script src="assets/cubejs/solve.js"></script>
-    <script src="assets/cubejs/worker.js"></script>
+    <script src="assets/twophase.js"></script>
 </head>
 
 <body>
@@ -58,8 +55,8 @@
         <div class="separate">
             <button class="reset"><i>Reset</i></button>
             <button class="srev inputhide"><i>Rollback</i></button>
-            <button class="solve inputhide"><i>Solve</i><br><i class="layer">Bylayers</i></button>
-            <button class="fast inputhide"><i>Solve</i><br><i class="kociemba">Kociemba</i></button>
+            <button class="solve inputhide"><i>Solve</i><br><i class="layer">ByLayers</i></button>
+            <button class="fast inputhide"><i>Solve</i><br><i class="kociemba">ByPhases</i></button>
             <button class="done"><i>Done</i></button>
         </div>
     </div>
