added text box for move inputs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="separate inputhide">
             <button class="scramble"><i>Scramble</i></button>
-            <button class="superflip"><i>Superflip</i></button>
-            <button class="inputclr"><i>Input</i></button>
+            <button class="inputmvs"><i>Input</i><br><i class="sub">ByMoves</i></button>
+            <button class="inputclr"><i>Input</i><br><i class="sub">ByColor</i></button>
         </div>
     </div>
     <div class="scene levitate" id="scene">
@@ -30,6 +30,7 @@
         </div>
     </div>
     <div class="sideb">
+        <input type="text" name="" id="algorithm" placeholder="ex: U' D' L...">
         <div class="input-container">
             <div class="white"></div>
             <div class="green"></div>
@@ -55,8 +56,8 @@
         <div class="separate">
             <button class="reset"><i>Reset</i></button>
             <button class="srev inputhide"><i>Rollback</i></button>
-            <button class="solve inputhide"><i>Solve</i><br><i class="layer">ByLayers</i></button>
-            <button class="fast inputhide"><i>Solve</i><br><i class="kociemba">ByPhases</i></button>
+            <button class="solve inputhide"><i>Solve</i><br><i class="sub">ByLayers</i></button>
+            <button class="fast inputhide"><i>Solve</i><br><i class="sub">ByPhases</i></button>
             <button class="done"><i>Done</i></button>
         </div>
     </div>
