--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="separate inputhide">
             <button class="scramble"><i>Scramble</i></button>
-            <button class="inputmvs"><i>Input</i><br><i class="sub">ByMoves</i></button>
-            <button class="inputclr"><i>Input</i><br><i class="sub">ByColor</i></button>
+            <button class="solve inputhide"><i>Solve</i><br><i class="sub">ByLayers</i></button>
+            <button class="fast inputhide"><i>Solve</i><br><i class="sub">ByPhases</i></button>
         </div>
     </div>
     <div class="scene levitate" id="scene">
@@ -31,6 +31,7 @@
     </div>
     <div class="sideb">
         <input type="text" name="" id="algorithm" placeholder="ex: U' D' L...">
+        <div id="dropdown" class="dropdown"></div>
         <div class="input-container">
             <div class="white"></div>
             <div class="green"></div>
@@ -56,8 +57,8 @@
         <div class="separate">
             <button class="reset"><i>Reset</i></button>
             <button class="srev inputhide"><i>Rollback</i></button>
-            <button class="solve inputhide"><i>Solve</i><br><i class="sub">ByLayers</i></button>
-            <button class="fast inputhide"><i>Solve</i><br><i class="sub">ByPhases</i></button>
+            <button class="inputmvs inputhide"><i>Input</i><br><i class="sub">ByMoves</i></button>
+            <button class="inputclr inputhide"><i>Input</i><br><i class="sub">ByColor</i></button>
             <button class="done"><i>Done</i></button>
         </div>
     </div>
